# Breakout2

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
Breakout/: Audio.cpp  Audio.h  Ball.h  BallLogic.cpp  BallLogic.h  Breakout.cpp  Brick.h  BrickLogic.cpp  BrickLogic.h  CMakeLists.txt  Game.cpp  Game.h  GameStates.cpp  GameStates.h  Main.cpp  Menu.cpp  Menu.h  Paddle.cpp  Paddle.h  SDLApp.cpp  SDLApp.h
include/: Breakout.h
src/: CMakeLists.txt  main.cpp
src/game/: Breakout.cpp
src/ui/: Menu.cpp
